iRedMail-0.9.6:
    * Improvements:
        - Nginx:
            - Add HSTS header for Roundcube, iRedAdmin, SOGo.

    * Fixed issues:
        - Postfix:
            - Not enable opportunistic TLS support for remote smtp clients.

        - Nginx:
            - Config file for catch-all virtual host (`default.conf` has been
              renamed to `00-default.conf`, to make sure it will be loaded
              befire other virtual host config files.

        - OpenBSD:
            - not enable uwsgi service.
            - not create symbol links for PHP programs.

    * Updated packages:
        + Roundcube -> 1.2.0
        + iRedAdmin -> 0.6.1
        + uwsgi -> 2.0.13.1 (OpenBSD only)

iRedMail-0.9.5-1:
    * Fixed issues:
        - Postfix:
            - Cannot deliver email to system account.
        - OpenLDAP:
            - Incorrect default password scheme if module 'pw-sha2' is not
              available.
        - PHP
            - Allow functions: 'popen', 'openlog'. Required by Roundcube.
        - Incorrect compress command used in logrotate config files.
        - Add missing package 'mcrypt' on RHEL/CentOS 6.

    * Updated packages:
        + iRedAPD -> 1.9.1

iRedMail-0.9.5:
    * Supports new distribution release:
        + Ubuntu 16.04 LTS (code name: xenial).
        + OpenBSD 5.9.

    * Drop support for old distribution releases:
        - Ubuntu 15.10 (code name: wily).
        - OpenBSD 5.8.
        - Debian 7 (code name: Wheezy). Please use Debian 8 instead.

          Debian team stops offering security updates for Debian 7 after
          April 25, 2016. Reference: https://wiki.debian.org/DebianOldStable

    * Improvements:
        - Postfix:
            + Supports Postfix parameter `sender_dependent_relayhost_maps`.
            + SMTP SASL AUTH is disabled on port 25. Please use port 587 instead.
        - Amavisd:
            + Add custom Amavisd log template (at log level 0) to always log
              SpamAssassin testing result.