@@ -55,38 +55,38 @@ ProxyPreserveHost On
 #   Allow from your-cas-host-addr
 # </Proxy>
 
+#
+# You should enable 2 `ProxyPass` directives in https
+#
 # Enable to use Microsoft ActiveSync support
 # Note that you MUST have many sogod workers to use ActiveSync.
 # See the SOGo Installation and Configuration guide for more details.
 #
-ProxyPass /Microsoft-Server-ActiveSync \
- http://127.0.0.1:20000/SOGo/Microsoft-Server-ActiveSync \
- retry=60 connectiontimeout=5 timeout=360
-
-ProxyPass /SOGo http://127.0.0.1:20000/SOGo retry=0
+#ProxyPass /Microsoft-Server-ActiveSync \
+# http://127.0.0.1:20000/SOGo/Microsoft-Server-ActiveSync \
+# retry=60 connectiontimeout=5 timeout=360
+#
+#ProxyPass /SOGo http://127.0.0.1:20000/SOGo retry=0
 
 <Proxy http://127.0.0.1:20000/SOGo>
-## adjust the following to your configuration
-  RequestHeader set "x-webobjects-server-port" "443"
-#  RequestHeader set "x-webobjects-server-name" "yourhostname"
-#  RequestHeader set "x-webobjects-server-url" "https://yourhostname"
+    # Redirect http access of /SOGo to https
+    RequestHeader set "x-webobjects-server-port" "443"
+    RequestHeader set "x-webobjects-server-name" "%{HTTP_HOST}e" env=HTTP_HOST
+    RequestHeader set "x-webobjects-server-url" "https://%{HTTP_HOST}e" env=HTTP_HOST
 
-## When using proxy-side autentication, you need to uncomment and
-## adjust the following line:
-  RequestHeader unset "x-webobjects-remote-user"
-#  RequestHeader set "x-webobjects-remote-user" "%{REMOTE_USER}e" env=REMOTE_USER
+    ## When using proxy-side autentication, you need to uncomment and
+    ## adjust the following line:
+    RequestHeader unset "x-webobjects-remote-user"
+    #RequestHeader set "x-webobjects-remote-user" "%{REMOTE_USER}e" env=REMOTE_USER
 
-  RequestHeader set "x-webobjects-server-protocol" "HTTP/1.0"
+    RequestHeader set "x-webobjects-server-protocol" "HTTP/1.0"
 
-  AddDefaultCharset UTF-8
-
-  Order allow,deny
-  Allow from all
+    AddDefaultCharset UTF-8
 </Proxy>
 
-# For Apple autoconfiguration
 <IfModule rewrite_module>
-  RewriteEngine On
-  RewriteRule ^/.well-known/caldav/?$ /SOGo/dav [R=301]
-  RewriteRule ^/.well-known/carddav/?$ /SOGo/dav [R=301]
+    RewriteEngine On
+    # For Apple autoconfiguration
+    RewriteRule ^/.well-known/caldav/?$ /SOGo/dav [R=301]
+    RewriteRule ^/.well-known/carddav/?$ /SOGo/dav [R=301]
 </IfModule>
